--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/pg-henry.png"
+                      src="assets/pg-henry.jpg"
                     />
                   </div>
                 </a>
