--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Francisco-Mastropierro_CV.pdf"
                 >
                   View Resume
                 </a>
